makeshift fix for mobile view

--- a/assets/css/section1.css
+++ b/assets/css/section1.css
@@ -128,6 +128,9 @@ li span {
     height: 100%;
     height: calc(var(--vh, 1vh) * 100);
   }
+  .s1 .logo {
+    padding-top: 25px;
+  }
   .hero-content {
     flex-direction: column;
     align-items: center;
